--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ p {
 
 /* Page Background */
 body {
-    background-color: #333;
+    background-color: #222;
     color: #e0e0e0;
     font-family: 'Patrick Hand', cursive;
     margin: 0;
@@ -69,9 +69,14 @@ body {
 
 header,
 footer {
-    background-color: #222;
+    background-color: #111111;
     padding: 1em 0;
     width: 100%;
+}
+
+header {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 45px;
 }
 
 header h1 {
@@ -82,6 +87,11 @@ header h1 {
 
 main {
     width: 80%;
+}
+
+footer {
+    border-top: 1px solid #ddd;
+    margin-top: 45px;
 }
 
 .intro,
